--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ buildscript {
     ext {
         springBootVersion = '1.3.3.RELEASE'
         springGradlePluginVersion = '0.5.4.RELEASE'
-        gradleAptPluginVersion = "1.0"
     }
     repositories {
 		mavenLocal()
@@ -16,30 +15,16 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse-wtp'
+apply plugin: 'eclipse'
 apply plugin: 'spring-boot' 
 apply plugin: 'war'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'maven-publish'
-apply from: 'applicationDependencies.gradle'
 
-
-war{
-   version = project.majorVersion+'.'+project.minorVersion+'.'+project.buildVersion+project.publishSuffix
-   rootSpec.exclude('scripts/**')
-}
-
-sourceCompatibility = project.jdkVersion
-targetCompatibility = project.jdkVersion
 
 repositories {
 		mavenLocal()
         maven { url "https://maven-central.storage.googleapis.com"}
         mavenCentral()
-}
-
-configurations {
-	providedRuntime
 }
 
 ext {
@@ -67,6 +52,9 @@ dependencies {
     //REST API Documentation
     compile ("io.springfox:springfox-swagger2:${swaggerVersion}")
     compile ("io.springfox:springfox-swagger-ui:${swaggerVersion}")
+	//database
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("com.h2database:h2")
 
 	testCompile "org.springframework.boot:spring-boot-starter-test"
 	testCompile "com.jayway.jsonpath:json-path"
