--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'spring-boot' 
 apply plugin: 'war'
+apply plugin: 'eclipse-wtp'
+apply plugin: 'spring-boot' 
 apply plugin: 'io.spring.dependency-management'
 
 
@@ -33,6 +33,20 @@ ext {
 	springBootAdminVersion = '1.3.2'
 	swaggerVersion = '2.3.1'
 }
+
+eclipse.classpath.file{
+    withXml { xml ->
+        def node = xml.asNode()
+        node.remove( node.find { it.@path == 'org.eclipse.jst.j2ee.internal.web.container'})
+        node.appendNode( 'classpathentry', [kind: 'con', path: 'org.eclipse.jst.j2ee.internal.web.container', exported: 'true'])
+    }
+}
+
+/**
+file{
+}
+}
+*/
 
 dependencyManagement {
   compile{
