--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'war'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'spring-boot' 
 apply plugin: 'io.spring.dependency-management'
+apply from: 'http://plugins.jasoft.fi/vaadin.plugin'
 
 
 repositories {
