--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 	//database
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("com.h2database:h2")
+	compile("org.postgresql:postgresql:9.4.1208")
 	//vaadin
 	compile("com.vaadin:vaadin-spring-boot-starter:+")
 	
