--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,13 @@ endpoints:
    health:
       sensitive: false
 spring: 
-    jpa:
-        show-sql: true
+   datasource:
+      driverClassName: org.h2.Driver
+   jpa:
+      show-sql: true
+
+---
+spring:
+   profiles: postgres
+   datasource:
+      url: jdbc:postgresql:AdelaCourseManagerDB
